Edit: Improve performance by switching all PNGs to webp

--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ a:hover {
 
     .tag::before {
         font-size: 0.7rem;
-        padding: 1px 5px;
+        padding: 0px 5px;
+        margin: 0 2px;
     }
 }
